# local-wispr-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/local_wispr_mcp/: __init__.py  __main__.py  audio.py  server.py
