[project]
name = "local-wispr-mcp"
version = "0.1.0"
description = "Local MCP server for audio transcription using NVIDIA Parakeet on Apple Silicon (MLX)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Felix Krueckel" }]
keywords = ["mcp", "asr", "parakeet", "mlx", "transcription", "apple-silicon"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.27.0",
    "parakeet-mlx>=0.5.1",
    "numpy>=2.0",
]

[project.scripts]
local-wispr-mcp = "local_wispr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_wispr_mcp"]
